# compute

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  buildAndTest.sh  compute-api.md  compute.kdev4  prepareRInside.sh  rc2compute.kdev4  travis_before_install.sh  travis_before_script.sh
.kdev4/: rc2compute.kdev4
R/rc2/: DESCRIPTION  NAMESPACE
R/rc2/R/: evaluate.R  handle-image.R  processItems.R  rc2.R
R/rc2/src/: EnvList.cpp  Makevars
R/rc2/src/json/: writer.inl
common/: CMakeLists.txt  Event.cpp  Event.hpp  EventBase.cpp  EventBase.hpp  FormattedException.cpp  FormattedException.hpp  PGDBConnection.cpp  PGDBConnection.hpp  PostgresUtils.hpp  RC2Utils.cpp  RC2Utils.hpp  ScopeGuard.hpp  ZeroInitializedStruct.hpp
computeClient/: computeClient.pl  query.json
json/: writer.h  writer.inl
nbproject/: configurations.xml  project.xml
parser/: CMakeLists.txt  Chunk.cpp  Chunk.hpp  ErrorHandling.cpp  ErrorHandling.hpp  LexerHelpers.cpp  LexerHelpers.hpp  PrivateChunks.cpp  PrivateChunks.hpp  RFilter.g4  RStringVisitor.cpp  RStringVisitor.hpp  Rc2ParserListener.cpp  Rc2ParserListener.hpp  Rc2RFilter.cpp  Rc2RFilter.hpp  RmdParser.cpp  RmdParser.hpp
rsrc/: swizzle.R
src/: CMakeLists.txt  DBFileSource.cpp  DBFileSource.hpp  EnvironmentWatcher.cpp  EnvironmentWatcher.hpp  Errors.hpp  FileManager.cpp  FileManager.hpp  FileWatcher.hpp  InotifyFileWatcher.cpp  InotifyFileWatcher.hpp  InputBufferManager.cpp  InputBufferManager.hpp  JsonCommand.hpp  PreviewData.cpp  PreviewData.hpp  PreviewDelegate.hpp  RC2Logging.cpp  RC2Logging.h  RJsonEncoder.cpp  RJsonEncoder.hpp  RServer-main.cpp  RServer.cpp  RServer.hpp  RSession-main.cpp  RSession.cpp  RSession.hpp  RSessionCallbacks.cpp  RSessionCallbacks.hpp  RSessionDataTypes.hpp  SessionCommon.hpp  SessionSpawnServer.cpp  WSSession.cpp  WSSession.hpp  rserver.cpp  rsession.cpp
tests/: CMakeLists.txt  RServerTests.cpp  chapter.Rmd  dbfilesource-t.cpp  dframe.R  environ-t.cpp  evaluate-t.cpp  inotifywatcher-t.cpp  inputbuffer-t.cpp  parser-t.cpp  pgdbconnection-t.cpp  preview-t.cpp  preview1.Rmd  previewCacheInvalidate.Rmd  rserver-t.cpp  rsession-t.cpp  test1.R  test1.Rmd  variables-t.cpp
tests/testlib/: CMakeLists.txt  TestPGDBConnection.cpp  TestPGDBConnection.hpp  TestingSession.cpp  TestingSession.hpp
tools/: rinside.patch
